[FIX] overflow

--- a/style.scss
+++ b/style.scss
@@ -49,7 +49,12 @@ body{
 }
 @media screen and (max-width: 1000px){
   .showcase{
-    min-height: 900px;
+    min-height: 1300px;
+  }
+}
+@media screen and (min-width: 1000px){
+  .showcase{
+    min-height: 1100px;
   }
 }
 #croco,#czapka{
@@ -60,7 +65,7 @@ body{
     height: 90vh;
     width: 90%;
     max-width: 1120px;
-    min-height: 1100px;
+    
     margin:auto;
     @media screen and (max-width: 1000px) {
       .showcase-layout{
